2009-02-13 Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth.erl: prevent from calling 
	get_vh_registered_users/2 when not available

2009-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/web/ejabberd_web.erl, src/web/ejabberd_http.erl: Add
	documentation stub for some types. This will be filled later.

	* src/jlib.erl: Document the short JID type.

	* src/mod_roster.erl: Document the type of the argument(s) and the
	returned type of every functions. Add guardians expression to exported
	functions to ensure at an early stage that we were given the right
	arguments. Fix table conversion to exmpp; many fields were left as
	string(), preventing matching from working correctly.
	(user_roster_item_parse_query/4): Fix a bug where the same variable
	was used for two distinct purpose. Fix a bad usage of
	exmpp_jid:jid_to_list/1.

2009-02-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_auth.erl, src/ejabberd_auth_anonymous.erl,
	src/ejabberd_auth_external.erl, src/ejabberd_auth_internal.erl,
	src/ejabberd_auth_ldap.erl, src/ejabberd_auth_odbc.erl,
	src/ejabberd_auth_pam.erl: Document the type of the argument(s) and
	the returned type of every functions.

	* src/ejabberd_auth.erl, src/ejabberd_auth_anonymous.erl: Add
	guardians expression to many functions to ensure at an early stage
	that we were given the right arguments. Other modules are not changed
	because they are only used by ejabberd_auth which already does the
	check.

2009-01-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/api/Makefile: Disable "TODO:" interpretation in eDoc because
	usually, the following text isn't in eDoc format.

2009-01-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/cyrsasl.erl, src/cyrsasl_plain.erl, src/cyrsasl_anonymous.erl,
	src/cyrsasl_digest.erl:  Document every functions to clarify the types
	to give and returned.

	* src/ejabberd_c2s.erl: exmpp_server_sasl:next_step/1 returns the